--- a/index.html
+++ b/index.html
@@ -609,7 +609,9 @@
                 </div>
                 <div class="card">
                     <a href="https://ibb.co/0yVxFsb2">
-                        <img src="https://i.ibb.co/tP1vqT7H/Screenshot-2025-06-15-202741.png"  alt="CareVeda" border="0" landing="lazy"></a>
+                      
+                    <img src="https://i.ibb.co/tP1vqT7H/Screenshot-2025-06-15-202741.png"  alt="CareVeda" border="0" landing="lazy"></a>
+                  <h3>CareVeda</h3>
                     <p>CareVeda a Modern Doctor's clinic app built with Flutter.</p>
 
                     <a href="https://github.com/Tirthaaa/CareVeda-Doctor-s-Clinic-App.git" target="_blank">GitHub</a>
