--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
             <div class="about-divider"></div>
             <p>
                 Additionally, I have experience in <strong>App development</strong>, allowing me to create seamless and
-                engaging mobile experiences. Let's build something amazing together!"</p>
+                engaging mobile experiences. Let's build something amazing together!</p>
             <div class="about-skills">
                 <span>HTML5</span>
                 <span>CSS3</span>
@@ -592,8 +592,8 @@
                     <a href="https://ibb.co/JwZGCXtr">
                         <img src="https://i.ibb.co/pBqMnCw4/chatbot.png" alt="Voice Assistant" border="0"
                             loading="lazy"></a>
-                    <h3>Voice Assistant</h3>
-                    <p>No need to type ! Just ask Tirtha your ultimate Voice Assistant.</p>
+                    <h3>Virtual Assistant</h3>
+                    <p>No need to type ! Just ask Tirtha your ultimate Virtual Assistant.</p>
 
                     <a href="https://github.com/Tirthaaa/VIRTUAL-ASSISTANT.git" target="_blank">GitHub</a>
                 </div>
