--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
 
             <div class="rightSection">
                 <a href="https://ibb.co/Myy8L7Jx">
-                    <img src="https://i.ibb.co/ymmhJqxc/IMG-20241021-142759-360.webp" alt="IMG-20241021-142759-360"
+                    <img src="https://i.ibb.co/0RGLBx1V/tirtha.jpg" alt="tirtha"
                         loading="lazy"></a>
             </div>
         </section>
