--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             max-width: 100%;
             border-radius: 50%;
             object-fit: cover;
-            box-shadow: 0 0 15px rgba(24, 252, 4, 1);
+            box-shadow: 0 0 15px rgba(251,255,0);
         }
 
         h1.section-title {
