--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
 
             <div class="rightSection">
                 <a href="https://ibb.co/Myy8L7Jx">
-                    <img src="https://i.ibb.co/0RGLBx1V/tirtha.jpg" alt="tirtha"
+                    <img src="https://i.ibb.co/xSkxMsr9/tirtha1.jpg" alt="tirtha1"
                         loading="lazy"></a>
             </div>
         </section>
