--- a/index.html
+++ b/index.html
@@ -608,10 +608,9 @@
                     <a href="https://github.com/Tirthaaa/DEVTIRTHA-PORTFOLIO.git" target="_blank">GitHub</a>
                 </div>
                 <div class="card">
-                    <a href="https://ibb.co/0yVxFsb2">
-                      
-                    <img src="https://i.ibb.co/tP1vqT7H/Screenshot-2025-06-15-202741.png"  alt="CareVeda" border="0" landing="lazy"></a>
-                  <h3>CareVeda</h3>
+                  <a href="https://ibb.co/Psqqc9H8">
+                      <img src="https://i.ibb.co/6cjjH1C5/Screenshot-2025-06-17-095405.png" alt="Screenshot-2025-06-17-095405" border="0" loading ="lazy"></a>
+                    <h3>CareVeda</h3>
                     <p>CareVeda a Modern Doctor's clinic app built with Flutter.</p>
 
                     <a href="https://github.com/Tirthaaa/CareVeda-Doctor-s-Clinic-App.git" target="_blank">GitHub</a>
