--- a/index.html
+++ b/index.html
@@ -608,8 +608,7 @@
                     <a href="https://github.com/Tirthaaa/DEVTIRTHA-PORTFOLIO.git" target="_blank">GitHub</a>
                 </div>
                 <div class="card">
-                  <a href="https://ibb.co/Psqqc9H8">
-                      <img src="https://i.ibb.co/6cjjH1C5/Screenshot-2025-06-17-095405.png" alt="Screenshot-2025-06-17-095405" border="0" loading ="lazy"></a>
+                <a href="https://ibb.co/8Lvq1VT7"><img src="https://i.ibb.co/W48Zm1q2/Care-Veda.png" alt="Care-Veda" border="0" loading="lazy"></a>
                     <h3>CareVeda</h3>
                     <p>CareVeda a Modern Doctor's clinic app built with Flutter.</p>
 
