--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ki<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -629,6 +629,20 @@
                 <textarea rows="4" id="message" name="message" placeholder="Your Message" required></textarea>
                 <button type="submit">Send Message</button>
             </form>
+section class="section" id="support" data-aos="zoom-in">
+    <h1 class="section-title">Support My Work</h1>
+    <p style="text-align: center; font-size: 0.95rem;">
+        If you find my projects helpful or inspiring, consider supporting me by buying a coffee ☕️
+    </p>
+    <div style="text-align: center; margin-top: 20px;">
+        <a href="https://www.buymeacoffee.com/TIRTHA" target="_blank" style="display: inline-block;">
+            <img src="https://cdn.buymeacoffee.com/buttons/v2/default-green.png"
+                alt="Buy Me A Coffee"
+                style="height: 60px; width: 217px; border-radius: 8px; box-shadow: 0 0 15px rgba(24,252,4); transition: transform 0.3s;">
+        </a>
+    </div>
+</section>
+
         </section>
     </main>
 
