--- a/index.html
+++ b/index.html
@@ -629,19 +629,21 @@ ki<!DOCTYPE html>
                 <textarea rows="4" id="message" name="message" placeholder="Your Message" required></textarea>
                 <button type="submit">Send Message</button>
             </form>
-section class="section" id="support" data-aos="zoom-in">
-    <h1 class="section-title">Support My Work</h1>
+
+    h1 class="section-title">Support My Work</h1>
     <p style="text-align: center; font-size: 0.95rem;">
-        If you find my projects helpful or inspiring, consider supporting me by buying a coffee ☕️
+        Enjoying my work? You can fuel it by buying me a coffee ☕
     </p>
     <div style="text-align: center; margin-top: 20px;">
-        <a href="https://www.buymeacoffee.com/TIRTHA" target="_blank" style="display: inline-block;">
-            <img src="https://cdn.buymeacoffee.com/buttons/v2/default-green.png"
-                alt="Buy Me A Coffee"
-                style="height: 60px; width: 217px; border-radius: 8px; box-shadow: 0 0 15px rgba(24,252,4); transition: transform 0.3s;">
+        <a href="https://www.buymeacoffee.com/YOUR_USERNAME" target="_blank" 
+           style="display: inline-block; background-color: rgb(24, 252, 4); padding: 10px 20px; 
+           border-radius: 25px; font-weight: 600; color: black; text-decoration: none; 
+           box-shadow: 0 0 12px rgba(24, 252, 4, 0.6); transition: transform 0.3s ease;">
+           <i class="fas fa-mug-hot" style="margin-right: 8px;"></i>Buy Me a Coffee
         </a>
     </div>
-</section>
+
+
 
         </section>
     </main>
