--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-ki<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -630,7 +630,7 @@ ki<!DOCTYPE html>
                 <button type="submit">Send Message</button>
             </form>
 
-    h1 class="section-title">Support My Work</h1>
+    
     <p style="text-align: center; font-size: 0.95rem;">
         Enjoying my work? You can fuel it by buying me a coffee ☕
     </p>
