--- a/index.html
+++ b/index.html
@@ -630,12 +630,12 @@
                 <button type="submit">Send Message</button>
             </form>
 
-    
+    <h1 class="section-title">Support Me</h1>
     <p style="text-align: center; font-size: 0.95rem;">
         Enjoying my work? You can fuel it by buying me a coffee ☕
     </p>
     <div style="text-align: center; margin-top: 20px;">
-        <a href="https://www.buymeacoffee.com/YOUR_USERNAME" target="_blank" 
+        <a href="https://www.buymeacoffee.com/TIRTHA" target="_blank" 
            style="display: inline-block; background-color: rgb(24, 252, 4); padding: 10px 20px; 
            border-radius: 25px; font-weight: 600; color: black; text-decoration: none; 
            box-shadow: 0 0 12px rgba(24, 252, 4, 0.6); transition: transform 0.3s ease;">
