--- a/index.html
+++ b/index.html
@@ -630,7 +630,10 @@
                 <button type="submit">Send Message</button>
             </form>
 
-    <h1 class="section-title">Support Me</h1>
+      </section>
+
+  <section class="section" id="support" data-aos="fade-up">
+  <h1 class="section-title">Support Me</h1>
     <p style="text-align: center; font-size: 0.95rem;">
         Enjoying my work? You can fuel it by buying me a coffee ☕
     </p>
@@ -642,11 +645,8 @@
            <i class="fas fa-mug-hot" style="margin-right: 8px;"></i>Buy Me a Coffee
         </a>
     </div>
-
-
-
-        </section>
     </main>
+</section>
 
     <footer>
         <div class="social-icons">
