--- a/index.html
+++ b/index.html
@@ -598,10 +598,9 @@
                     <a href="https://github.com/Tirthaaa/VIRTUAL-ASSISTANT.git" target="_blank">GitHub</a>
                 </div>
                 <div class="card">
-                    <a href="https://ibb.co/G4Y0PRgv">
-                        <img
-                        src="https://i.ibb.co/YFn3jhv7/Screenshot-2025-06-13-202518.png" alt="My Portfolio"
-                            border="0" landing="lazy"></a>
+                  <a href="https://ibb.co/Rk9XrWK7">
+                      <img src="https://i.ibb.co/VctFn8G3/Screenshot-2025-06-20-225122.png" alt="Screenshot-2025-06-20-225122" border="0" oading="lazy">
+                  </a>
                     <h3>My Portfolio</h3>
                     <p>Modern portfolio website built with HTML, CSS, JS.</p>
 
