--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
                 <div class="card">
                     <img src="https://i.ibb.co/d4yzjqRh/gmf3yp-EXBj2wvf-QWC-ifob-HAo-Mj-Qs9s6b-KS-Dwi-Zd3dw2us-Nqd-Mp-G-1754136520168-completion-certificate.jpg"  alt="Certificate Three" loading="lazy">
                     <h3>Cybersecurity Analyst Job Simulation</h3>
-                    <p>Issued by: TATA</p>
+                    <p>Issued by: Forage</p>
                     <a href="https://ibb.co/1Gxw75kS" target="_blank">View Certificate</a>
                 </div>
             </div>
