--- a/index.html
+++ b/index.html
@@ -602,6 +602,13 @@
 
                     <a href="https://github.com/Tirthaaa/CareVeda-Doctor-s-Clinic-App.git" target="_blank">GitHub</a>
                 </div>
+                  <div class="card">
+                <a href="https://ibb.co/8Lvq1VT7"><img src="https://ibb.co/tPzSNCS8"><img src="https://i.ibb.co/KzDYQyYF/Screenshot-2025-11-21-110318.png" alt="ISHAA YOGA" border="0" loading="lazy"></a>
+                    <h3>ISHAA YOGA</h3>
+                    <p>Discover inner peace with ISHAA YOGA.</p>
+
+                    <a href="https://ishaayoga.in/" target="_blank">View</a>
+                </div>
             </div>
         </section>
 
@@ -709,4 +716,5 @@
 </body>
 
 </html>
+
 
