--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
                     <a href="https://github.com/Tirthaaa/CareVeda-Doctor-s-Clinic-App.git" target="_blank">GitHub</a>
                 </div>
                   <div class="card">
-                <a href="https://ibb.co/8Lvq1VT7"><img src="https://ibb.co/tPzSNCS8"><img src="https://i.ibb.co/KzDYQyYF/Screenshot-2025-11-21-110318.png" alt="ISHAA YOGA" border="0" loading="lazy"></a>
+                <a href="https://ibb.co/tPzSNCS"><img src="https://i.ibb.co/KzDYQyYF/Screenshot-2025-11-21-110318.png" alt="ISHAA YOGA" border="0" loading="lazy"></a>
                     <h3>ISHAA YOGA</h3>
                     <p>Discover inner peace with ISHAA YOGA.</p>
 
@@ -716,5 +716,6 @@
 </body>
 
 </html>
+
 
 
