--- a/index.html
+++ b/index.html
@@ -609,6 +609,13 @@
 
                     <a href="https://ishaayoga.in/" target="_blank">View</a>
                 </div>
+                <div class="card">
+                <a href="https://ibb.co/k6h6QTmG"><img src="https://i.ibb.co/JFzF5T3c/Screenshot-2025-11-23-193251.png" alt="3D Profile Card" border="0" loading="lazy"></a>
+                    <h3>3D Profile Card</h3>
+                    <p>3D Profile Card.</p>
+
+                    <a href="https://tirtha.github.io/PROFILE-CARD/" target="_blank">View</a>
+                </div>
             </div>
         </section>
 
@@ -716,6 +723,7 @@
 </body>
 
 </html>
+
 
 
 
