--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
                     <h3>Virtual Assistant</h3>
                     <p>No need to type ! Just ask Tirtha your ultimate Virtual Assistant.</p>
 
-                    <a href="https://github.com/Tirthaaa/VIRTUAL-ASSISTANT.git" target="_blank">GitHub</a>
+                    <a href=" https://tirthaaa.github.io/VIRTUAL-ASSISTANT/" target="_blank">View</a>
                 </div>
                 <div class="card">
                   <a href="https://ibb.co/Rk9XrWK7">
@@ -609,13 +609,7 @@
 
                     <a href="https://ishaayoga.in/" target="_blank">View</a>
                 </div>
-                <div class="card">
-                <a href="https://ibb.co/k6h6QTmG"><img src="https://i.ibb.co/JFzF5T3c/Screenshot-2025-11-23-193251.png" alt="3D Profile Card" border="0" loading="lazy"></a>
-                    <h3>3D Profile Card</h3>
-                    <p>3D Profile Card.</p>
-
-                    <a href="https://tirtha.github.io/PROFILE-CARD/" target="_blank">View</a>
-                </div>
+            
             </div>
         </section>
 
@@ -723,6 +717,7 @@
 </body>
 
 </html>
+
 
 
 
